# litenotify-joblite

./: .gitignore  .gitmodules  BINDINGS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  main.py  pyproject.toml
.github/: zizmor.yml
.github/workflows/: ci.yml  package-proof.yml  release-crates.yml  release-dotnet.yml  scary-nightly.yml  soak.yml  zizmor.yml
bench/: README.md  ext_bench.py  joblite_bench.py  real_bench.py  stream_bench.py  wake_latency_bench.py
bench/wal_index_methods/: Cargo.toml  README.md
bench/wal_index_methods/src/: main.rs
examples/: demo.py
honker/: Cargo.toml
honker-core/: Cargo.toml  README.md
honker-core/src/: cron.rs  honker_ops.rs  kernel_watcher.rs  lib.rs  shm_watcher.rs
honker-extension/: Cargo.toml  README.md
honker-extension/src/: lib.rs
honker/src/: lib.rs
joblite/: __init__.py  joblite.py
joblite_django/: __init__.py
joblite_django/management/commands/: joblite_worker.py
joblite_fastapi/: __init__.py  joblite_fastapi.py
litenotify/: Cargo.toml  test_basic.py
litenotify-core/: Cargo.toml
litenotify-core/src/: cron.rs  joblite_ops.rs  lib.rs
litenotify-extension/: Cargo.toml
litenotify-extension/src/: lib.rs
litenotify-node/: index.d.ts
litenotify-node/src/: lib.rs
litenotify/src/: lib.rs  notifier.rs
scripts/: README.md  proof_fcntl_vs_pragma.py  test_sqlite_versions.py
scripts/proof/: package-install-smoke.sh
site/: package.json
tests/: conftest.py  test_crash_recovery.py  test_cross_process_wake_latency.py  test_extension_interop.py  test_fault_injection.py  test_joblite.py  test_joblite_django.py  test_joblite_fastapi.py  test_joblite_flask.py  test_litenotify.py  test_multiprocess.py  test_performance_floors.py  test_rate_limit.py  test_real_app_example.py  test_real_e2e_scenarios.py  test_resource_bounds.py  test_resource_release.py  test_ruby_python_interop.py  test_scheduler.py  test_scheduler_boundaries.py  test_schema_migration.py  test_soak.py  test_stream.py  test_subscribe_race.py  test_task_expiration.py  test_task_locking.py  test_task_results.py  test_tasks.py  test_time_triggers_e2e.py  test_watcher_backends.py  test_watcher_backends_e2e.py  test_watcher_backends_queue_e2e.py
