[project]
name = "litenotify-workspace"
version = "0.1.0"
description = "litenotify + joblite development workspace (not a publishable package; see packages/)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

# Workspace-level pytest config. Sees every test across joblite and the
# framework plugins.
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-n auto"
