[package]
name = "honker-core"
version = "0.2.0"
edition = "2024"
description = "Shared Rust foundation for Honker bindings (SQLite loadable extension, PyO3, napi-rs, and friends). Not intended for direct use."
license = "Apache-2.0"
repository = "https://github.com/russellromney/honker"
homepage = "https://honker.dev"
readme = "README.md"
keywords = ["sqlite", "queue", "pubsub", "notify", "honker"]
categories = ["database", "concurrency"]

[lib]
name = "honker_core"
# Plain rlib — no cdylib, no Python/Node/C ABI here. Consumed as a
# regular Cargo dependency by the three binding crates.

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
parking_lot = "0.12.5"
rusqlite = { version = "0.39.0", features = ["functions", "hooks"] }
thiserror = "2.0.18"

[dev-dependencies]
# chrono-tz only in tests — lets us exercise DST edge cases with a
# fixed timezone (US/Eastern) regardless of where tests run.
chrono-tz = "0.10"
