[package]
name = "honker-extension"
version = "0.2.1"
edition = "2024"
description = "SQLite loadable extension for Honker. Adds honker_* SQL functions (queues, streams, scheduler, pub/sub) to any SQLite client."
license = "Apache-2.0"
repository = "https://github.com/russellromney/honker"
homepage = "https://honker.dev"
readme = "README.md"
keywords = ["sqlite", "queue", "pubsub", "notify", "honker"]
categories = ["database", "concurrency"]

# Output file is `libhonker_ext.dylib` / `.so`. Users load with:
#     SELECT load_extension('/path/to/libhonker_ext');
# The crate name differs from the PyO3 `honker` cdylib because both
# would otherwise try to write `target/release/libhonker.dylib` and
# clobber each other.
[lib]
name = "honker_ext"
crate-type = ["cdylib"]

[dependencies]
# Using both `path` and `version` lets Cargo publish this crate to
# crates.io referencing the real honker-core = "0.2" while still
# using the in-tree source for local builds.
honker-core = { path = "../honker-core", version = "0.2.1", default-features = false }
# "loadable_extension" feature makes rusqlite usable from inside a
# sqlite3_extension_init entry point.
rusqlite = { version = "0.39.0", features = ["functions", "hooks", "loadable_extension"] }
