[package]
name = "honker"
version = "0.1.0"
edition = "2024"

[dependencies]
parking_lot = "0.12.5"
rusqlite = { version = "0.39.0", features = ["functions", "hooks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["sync", "macros", "rt-multi-thread", "time"] }
