[package]
name = "litenotify-core"
version = "0.1.0"
edition = "2024"
description = "Shared Rust core for litenotify bindings (PyO3, SQLite loadable extension, napi-rs). Not intended for direct use."
license = "Apache-2.0"

[lib]
name = "litenotify_core"
# Plain rlib — no cdylib, no Python/Node/C ABI here. Consumed as a
# regular Cargo dependency by the three binding crates.

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
parking_lot = "0.12.5"
rusqlite = { version = "0.39.0", features = ["functions", "hooks"] }
thiserror = "2.0.18"

[dev-dependencies]
# chrono-tz only in tests — lets us exercise DST edge cases with a
# fixed timezone (US/Eastern) regardless of where tests run.
chrono-tz = "0.10"
