[package]
name = "litenotify"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "litenotify"
crate-type = ["cdylib"]

[dependencies]
honker = { version = "0.1.0", path = "../honker" }
parking_lot = "0.12.5"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
rusqlite = { version = "0.39.0", features = ["functions", "hooks"] }
tokio = { version = "1.52.1", features = ["sync"] }
