[package]
name = "litenotify"
version = "0.1.0"
edition = "2024"

[lib]
name = "litenotify"
crate-type = ["cdylib"]

[dependencies]
parking_lot = "0.12.5"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
rusqlite = { version = "0.39.0", features = ["functions", "hooks"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.52.1", features = ["sync", "macros", "rt-multi-thread", "time"] }
